--- a/style-home.css
+++ b/style-home.css
@@ -19,7 +19,7 @@ body{
     position: relative;
     width: 100%;
     height: 100vh;
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
     overflow: hidden;
 }
 
@@ -63,13 +63,13 @@ thead{
     transform: translate(400px);
 }
 
-.input-group{
+#chat-container .input-group{
     position: absolute;
     bottom: 0;
     z-index: 2;
 }
 
-.input-group.add-delete-friend{
+#chat-container .input-group.add-delete-friend{
     width: 90%;
     transition: 1.2s .3s ease-in-out;
 }
@@ -82,7 +82,7 @@ thead{
     transform: translate(-0px);
 }
 
-.form-control{
+#chat-container.form-control{
     position: absolute;
     z-index: 3;
 }
@@ -177,4 +177,35 @@ thead{
 .msg-inbox .sent p{
     background: #ffffff none repeat scroll 0 0;
     color: #0a0a0a;
+}
+
+
+/*MOVIE PART*/
+
+#movie-container{
+    position: relative;
+}
+
+#video{
+    position: absolute;
+    width: 0%;
+    height: 0%;
+}
+
+.onplay#video{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 5;
+}
+
+#namebox, #select-button, #upload-button, #download-button, #start-button{
+    margin-top: 50px;
+    width: 15%;
+}
+
+#extensionbox, #progressbox{
+    color: #fff;
 }
